opam-version: "1.2"
maintainer: "stephanos.tsoucas@gmail.com"
authors: ["Stephanos Tsoucas"]
license: "Apache-2.0"
homepage: ""
version: "0.0.1"
bug-reports: ""
dev-repo: "https://github.com/nosman/Ocamlapi.git"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
available: [ ocaml-version >= "4.04" ]
depends: [
    "dune"
    "core"
    "re2"
    "cohttp"
]
