opam-version: "2.0"
maintainer: "stephanos.tsoucas@gmail.com"
authors: ["Stephanos Tsoucas"]
license: "Apache-2.0"
synopsis: "Path-based HTTP request routing for Ocaml"
homepage: "https://github.com/nosman/Ocamlapi"
version: "0.0.1"
bug-reports: "https://github.com/nosman/Ocamlapi/issues"
dev-repo: "git+https://github.com/nosman/Ocamlapi.git"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.04"}
  "ounit"
  "dune"
  "core"
  "re2"
  "cohttp"
]
